--- a/src/components/pad/pad.css
+++ b/src/components/pad/pad.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: space-around;
 }
-input[type=text], select {
+.pada input[type=text], select {
     width: 41px;
     border: 0.5px solid #A0AEC0;
     border-radius: 2px;
